[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/unit_scenes/Unit.gd" type="Script" id=1]
[ext_resource path="res://art/ui/SelectorMarker.png" type="Texture" id=2]
[ext_resource path="res://art/ui/SelectorMarker3.png" type="Texture" id=3]
[ext_resource path="res://art/ui/SelectorMarker2.png" type="Texture" id=4]
[ext_resource path="res://art/ui/SelectorMarker4.png" type="Texture" id=5]
[ext_resource path="res://sound/unit_select_1.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/unit_click_1.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "selected",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "unselected",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Unit" type="Area2D" index="0"]

scale = Vector2( 0.5, 0.5 )
z_index = 30
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
max_health = 0
type = "abstract_unit"

[node name="UnitSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, -90 )
scale = Vector2( 0.2, 0.2 )
animation = "default"
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="SelectorIcon" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 0, -210 )
scale = Vector2( 0.7, 0.7 )
z_index = 10
frames = SubResource( 1 )
animation = "unselected"
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0, -90 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Moves" type="Node" parent="." index="3"]

[node name="SelectSound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MoveSound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


